--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ table.TableGrid
 		<td valign="top" style="width: 1211px; height: 31px; padding: .75pt" align="left">
 		<p class="text">
 		<span lang="en-us"><font face="Calibri" size="5" color="#0000FF">
-		<b>OECS: Towards Online Extrinsics Correction for the Surround-view System</b></font></span><p class="text">
+		<b>Zero-Shot Restoration of Underexposed Images via Robust Retinex Decomposition</b></font></span><p class="text">
 		<span lang="en-us"><font face="Calibri" size="4" color="#0000FF">
-		Tianjun Zhang<sup>1</sup>,&nbsp;Lin Zhang</font></span><font face="Calibri" size="4" color="#0000FF"><sup>1</sup><span lang="en-us">, 
+		Anqi Zhu<sup>1</sup>,&nbsp;Lin Zhang</font></span><font face="Calibri" size="4" color="#0000FF"><sup>1</sup><span lang="en-us">, 
 		Ying Shen</span><sup>1</sup><span lang="en-us">,
 		Yong Ma</span><sup>2</sup><span lang="en-us">,
 		Shengjie Zhao</span><sup>1</sup><span lang="en-us">, 
@@ -77,7 +77,7 @@ table.TableGrid
 <p><span lang="en-us"><b><font face="Calibri" size="5">Introduction</font></b></span></p>
 <p>
 <span style="font-size: 13pt; font-family: Calibri; color: windowtext" lang="EN-US">
-This is the website for our paper &quot;<a href="OECS_camera_ready.pdf">Zero-Shot Restoration of Underexposed Images via Robust Retinex Decomposition<span style="color: #000000">, 
+This is the website for our paper &quot;<a href="RRDNet_camera_ready.pdf">Zero-Shot Restoration of Underexposed Images via Robust Retinex Decomposition<span style="color: #000000">, 
 International Conference on Multimedia and Expo, 2020</span></a>&quot;</span></p>
 <hr>
 <p><span lang="en-us"><b><font face="Calibri" size="5">Source Codes</font></b></span></p>
