--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>OECS</title>
+<title>RRDNet</title>
 
 <style>
 <!--
@@ -20,7 +20,7 @@ table.TableGrid
 </style>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>OECS</title>
+<title>RRDNet</title>
 
 <style>
 <!--
@@ -128,7 +128,7 @@ are demo videos of underexposed images and videos restoration using our RRDNet. 
 <video src="demo-videos.mp4" width="600" height="450" controls preload></video>
 
 <hr>
-<p align="justify"><font face="Calibri">Last update: <span lang="en-us">Mar. 2,
+<p align="justify"><font face="Calibri">Last update: <span lang="en-us">Mar. 13,
 </span>202<span lang="en-us">0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
 </body>
 </html>
